--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,3 @@
-REACT_APP_API_URL=http://localhost:8000/api
-REACT_APP_COMPANY_DOMAIN=http://bonlineco.com/
+PUBLIC_URL=https://qr.bonlineco.com
+REACT_APP_API_URL=https://qr.bonlineco.com/api
+REACT_APP_COMPANY_DOMAIN=http://qr.bonlineco.com/
