--- a/.htaccess
+++ b/.htaccess
@@ -21,5 +21,9 @@ RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 # Rewrite /SZe7DV (or any 6-character code) to /backend/public/index.php/SZe7DV
 RewriteRule ^([A-Za-z0-9]{6})$ /backend/public/index.php/$1 [L,QSA]
-
-# (Optional) If your short codes can be a different length, adjust {6} accordingly.
+# php -- BEGIN cPanel-generated handler, do not edit
+# Set the “ea-php82” package as the default “PHP” programming language.
+<IfModule mime_module>
+  AddHandler application/x-httpd-ea-php82 .php .php8 .phtml
+</IfModule>
+# php -- END cPanel-generated handler, do not edit
